# rust_clean_code

./: Cargo.toml  Makefile  README.md
cmd/app/: Cargo.toml
cmd/app/src/: blog_test.rs  main.rs
internal/: Cargo.toml
internal/application/: Cargo.toml
internal/domain/: Cargo.toml
internal/domain/src/: blog_types.rs  lib.rs
internal/src/: blog_manager.rs  lib.rs
