[package]
name = "cc1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[dependencies.internal]
path = "../../internal"
version = "0.1.0"


[dependencies.internal_domain]
path = "../../internal/domain"
version = "0.1.0"